--- a/index.html
+++ b/index.html
@@ -25,19 +25,142 @@
     </div>
 
     <hr>
-    
+
     <h1>Problems</h1>
+
+    <hr>
 
     <div class="container">
       <div class="row">
+        <h2>Problem 1 (3 points)</h2>
         <div class="col-md-6">
           Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
         </div>
         <div class="col-md-6">
-          Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
+          Example run: Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
         </div>
       </div>
     </div>
+
+    <hr>
+
+    <div class="container">
+      <div class="row">
+        <h2>Problem 1 (3 points)</h2>
+        <div class="col-md-6">
+          Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
+        </div>
+        <div class="col-md-6">
+          Example run: Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
+        </div>
+      </div>
+    </div>
+
+    <hr>
+    <div class="container">
+      <div class="row">
+        <h2>Problem 1 (3 points)</h2>
+        <div class="col-md-6">
+          Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
+        </div>
+        <div class="col-md-6">
+          Example run: Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
+        </div>
+      </div>
+    </div>
+
+    <hr>
+    <div class="container">
+      <div class="row">
+        <h2>Problem 1 (3 points)</h2>
+        <div class="col-md-6">
+          Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
+        </div>
+        <div class="col-md-6">
+          Example run: Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
+        </div>
+      </div>
+    </div>
+
+    <hr>
+    <div class="container">
+      <div class="row">
+        <h2>Problem 1 (3 points)</h2>
+        <div class="col-md-6">
+          Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
+        </div>
+        <div class="col-md-6">
+          Example run: Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
+        </div>
+      </div>
+    </div>
+
+    <hr>
+    <div class="container">
+      <div class="row">
+        <h2>Problem 1 (3 points)</h2>
+        <div class="col-md-6">
+          Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
+        </div>
+        <div class="col-md-6">
+          Example run: Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
+        </div>
+      </div>
+    </div>
+
+    <hr>
+    <div class="container">
+      <div class="row">
+        <h2>Problem 1 (3 points)</h2>
+        <div class="col-md-6">
+          Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
+        </div>
+        <div class="col-md-6">
+          Example run: Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
+        </div>
+      </div>
+    </div>
+
+    <hr>
+    <div class="container">
+      <div class="row">
+        <h2>Problem 1 (3 points)</h2>
+        <div class="col-md-6">
+          Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
+        </div>
+        <div class="col-md-6">
+          Example run: Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
+        </div>
+      </div>
+    </div>
+
+    <hr>
+    <div class="container">
+      <div class="row">
+        <h2>Problem 1 (3 points)</h2>
+        <div class="col-md-6">
+          Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
+        </div>
+        <div class="col-md-6">
+          Example run: Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
+        </div>
+      </div>
+    </div>
+
+    <hr>
+    <div class="container">
+      <div class="row">
+        <h2>Problem 1 (3 points)</h2>
+        <div class="col-md-6">
+          Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
+        </div>
+        <div class="col-md-6">
+          Example run: Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
+        </div>
+      </div>
+    </div>
+
+    <hr>
 
   </div>
 
