--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>OkstateACM Fall 2017 Programming Competition</title>
-  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
@@ -32,12 +33,33 @@
 
     <div class="container">
       <div class="row">
-        <h2>Problem 1 (3 points)</h2>
         <div class="col-md-6">
-          Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
+          <h2>Problem 1 (3 points)</h2>
+          <div class="well"><p>Given an input read from stdin, print it backwards and diagonally.</p></div>
         </div>
         <div class="col-md-6">
-          Example run: Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
+          <h2>Specifications</h2>
+          Input: A string
+          <br />
+          Output: The string printed diagonally and in reverse
+
+          <h2>Example Run</h2>
+          Input: <kbd>Pistol Pete</kbd>
+          <br>
+          Output:
+          <div class="well">
+            <p>e</p>
+            <p>&nbsp;t</p>
+            <p>&nbsp;&nbsp;e</p>
+            <p>&nbsp;&nbsp;&nbsp;P</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp; </p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;l</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;o</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;t</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;s</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;i</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;P</p>
+          </div>
         </div>
       </div>
     </div>
@@ -46,12 +68,37 @@
 
     <div class="container">
       <div class="row">
-        <h2>Problem 1 (3 points)</h2>
         <div class="col-md-6">
-          Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
+          <h2>Problem 2: Caesar Cipher (3 points)</h2>
+          <div class="well">
+           The caesar cipher is a (very outdated...) method of encryption that uses a key, also known as a shift, to encrypt messages.
+                    <br />
+                    To encrypt any letter of the alphabet, you simply add the shift to it. For example, with a shift of <code>3</code>, <code>a</code> becomes <code>a + 3</code> which is <code>d</code>, <code>b</code> becomes <code>e</code>, etc. <a href="https://github.com/OKStateACM/CryptoWorkshop/blob/master/Notes_draft.md">Some more info on the notes from our cryptography workshop</a>
+                    <br />
+                    Brutus wants to figure out what key Caesar most commonly uses. He somehow has access to several messages and their encrypted counterparts. Write a program to help Brutus figure out what key was used to encrypt a certain message.
+          </div>
         </div>
         <div class="col-md-6">
-          Example run: Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
+          <h2>Specifications</h2>
+          Input1: a plaintext String
+          <br />
+          Input2: another string that is the encrypted form of Input1
+          <br />
+          Output: The key used to encrypt Input1 into Input2
+          <hr />
+          Assume that only letters a-z will be in the input. No need to worry about punctuation or capital letters.
+          <hr />
+          The encryption scheme wraps around, i.e. <code>z + 3 = c</code>, <code>a + 26 = a</code>, <code>b + 27 = c</code>
+          <hr />
+          You can assume that Input2 will always be the correct encrypted form of Input1.
+          <br />
+
+          <h2>Example Run</h2>
+          Plain text: <kbd>gopokes</kbd>
+          <br />
+          Encrypted text: <kbd>ltutpjx</kbd>
+          <br />
+          Key Used: <kbd>5</kbd>
         </div>
       </div>
     </div>
@@ -59,12 +106,28 @@
     <hr>
     <div class="container">
       <div class="row">
-        <h2>Problem 1 (3 points)</h2>
         <div class="col-md-6">
-          Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
+          <h2>Problem 3: The rorrim mirror (3 points)</h2>
+          <div class="well">
+            Given an integer n, and a list of n words, print out n lines. Each line should have one of the words from the list, first printed backwards, then printed forwards, with one space inbetween. On any given line, there must be enough leading spaces so that the first character of the words line up on the printout.
+          </div>
         </div>
         <div class="col-md-6">
-          Example run: Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
+          <h2>Specifications</h2>
+          Input: <kbd>Integer n, followed by n words</kbd>
+          <br />
+          Output: <kbd>Exactly as specified in problem</kbd>
+          <br />
+          <h2>Example Run</h2>
+          Input: <kbd>4 Sun Moon Stellar Balloon</kbd>
+          <br />
+          Output:
+          <div class="well">
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;nuS Sun</p>
+            <p>&nbsp;&nbsp;&nbsp;nooM Moon</p>
+            <p>ralletS Stellar</p>
+            <p>noollaB Balloon</p>
+          </div>
         </div>
       </div>
     </div>
@@ -72,12 +135,32 @@
     <hr>
     <div class="container">
       <div class="row">
-        <h2>Problem 1 (3 points)</h2>
         <div class="col-md-6">
-          Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
+          <h2>Problem 4: So many integer sequences... (3 points)</h2>
+          <div class="well">
+            The fibonacci sequence <code>F(n)</code> is defined as follows:
+            <div class="well">F(n) = F(n-1) + F(n-2) with F(0) = 0 and F(1) = 1 <a href="http://oeis.org/A000045">(more info)</a></div>
+            Recamán's sequence is defined as follows:
+            <div class="well">a(0) = 0; for n > 0, a(n) = a(n-1) - n if a(n-1)-n is positive and not already in the sequence, otherwise a(n) = a(n-1) + n. <a href="http://oeis.org/A005132">(more info)</a></div>
+            Write a program that, when given a number <code>n</code>, determines if <code>n</code> is in the the first 45 elements of the fibonacci sequence. If <code>n</code> is not in the first 45 elements of the fibonacci sequence, tell the user so and stop the program. Otherwise, figure out which index of the fibonacci sequence <code>n</code> is, and determine the value of Recamán's sequence for that index.
+          </div>
         </div>
         <div class="col-md-6">
-          Example run: Consectetur dolor repudiandae sit aut voluptate Architecto quibusdam saepe sunt cupiditate magnam? Molestias cum voluptas labore eaque corrupti minus libero, placeat possimus recusandae eius aut ullam. Beatae impedit aut cumque.
+          <h2>Specifications</h2>
+          <p>n &lt;= 701408733</p>
+          <p>You only have to check if n is one of the first 45 elements of the fibonacci sequence, that is <code>fib(0)</code> through <code>fib(44)</code>.</p>
+          <h2>Example Runs</h2>
+          Input: <kbd>4181</kbd>
+          <br />
+          Output: 62
+          <hr />
+          Input: <kbd>701408733</kbd>
+          <br />
+          Output: 36
+          <hr />
+          Input: <kbd>9</kbd>
+          <br />
+          Output: 9 is not in the first 45 elements of the fibonacci sequence
         </div>
       </div>
     </div>
@@ -164,7 +247,7 @@
 
   </div>
 
-  <script src="node_modules/jquery/dist/jquery.min.js"></script>
-  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
