Add a quick note onto the caesar cipher problem

--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
           The encryption scheme wraps around, i.e. <code>z + 3 = c</code>, <code>a + 26 = a</code>, <code>b + 27 = c</code>
           <hr />
           You can assume that Input2 will always be the correct encrypted form of Input1.
+          <hr />
+          <b>Note: </b> The ascii range for a-z starts with a at 97. If you want to work with a-z as 1-26 subtract 96 from the char.
           <br />
 
           <h2>Example Run</h2>
