--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             The fibonacci sequence <code>F(n)</code> is defined as follows:
             <div class="well">F(n) = F(n-1) + F(n-2) with F(0) = 0 and F(1) = 1 <a href="http://oeis.org/A000045">(more info)</a></div>
             Recamán's sequence is defined as follows:
-            <div class="well">a(0) = 0; for n > 0, a(n) = a(n-1) - n if a(n-1)-n is positive and not already in the sequence, otherwise a(n) = a(n-1) + n. <a href="http://oeis.org/A005132">(more info)</a></div>
+            <div class="well">a(0) = 0; for n &gt; 0, a(n) = a(n-1) - n if a(n-1)-n is positive and not already in the sequence, otherwise a(n) = a(n-1) + n. <a href="http://oeis.org/A005132">(more info)</a></div>
             Write a program that, when given a number <code>n</code>, determines if <code>n</code> is in the the first 45 elements of the fibonacci sequence. If <code>n</code> is not in the first 45 elements of the fibonacci sequence, tell the user so and stop the program. Otherwise, figure out which index of the fibonacci sequence <code>n</code> is, and determine the value of Recamán's sequence for that index.
           </div>
         </div>
