Better examples for Ceasar cipher question

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <hr />
           Assume that only letters a-z will be in the input. No need to worry about punctuation or capital letters.
           <hr />
-          The encryption scheme wraps around, i.e. <code>z + 3 = c</code>, <code>a + 26 = a</code>, <code>b + 27 = c</code>
+          The encryption scheme wraps around, i.e. <code>z + 3 = c</code>, <code>c + 25 = b</code>, <code>z + 20 = t</code>
           <hr />
           You can assume that Input2 will always be the correct encrypted form of Input1.
           <hr />
