Remove unnecessary formatting

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <br />
           Encrypted text: <kbd>ltutpjx</kbd>
           <br />
-          Key Used: <kbd>5</kbd>
+          Key Used: 5
         </div>
       </div>
     </div>
@@ -118,7 +118,7 @@
           <h2>Specifications</h2>
           Input: <kbd>Integer n, followed by n words</kbd>
           <br />
-          Output: <kbd>Exactly as specified in problem</kbd>
+          Output: Exactly as specified in problem
           <br />
           <h2>Example Run</h2>
           Input: <kbd>4 Sun Moon Stellar Balloon</kbd>
