Remove unnecessary kbd tag

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
         <div class="col-md-6">
           <h2>Specifications</h2>
-          Input: <kbd>Integer n, followed by n words</kbd>
+          Input: Integer n, followed by n words
           <br />
           Output: Exactly as specified in problem
           <br />
