--- a/index.html
+++ b/index.html
@@ -151,11 +151,12 @@
           <div class="well">F(n) = F(n-1) + F(n-2) with F(0) = 0 and F(1) = 1 <a href="http://oeis.org/A000045">(more info)</a></div>
           Recamán's sequence is defined as follows:
           <div class="well">a(0) = 0; for n &gt; 0, a(n) = a(n-1) - n if a(n-1)-n is positive and not already in the sequence, otherwise a(n) = a(n-1) + n. <a href="http://oeis.org/A005132">(more info)</a></div>
-          Write a program that, when given a number <code>n</code>, determines if <code>n</code> is in the the first 45 elements of the fibonacci sequence. If <code>n</code> is not in the first 45 elements of the fibonacci sequence, tell the user so and stop the program. Otherwise, figure out which index of the fibonacci sequence <code>n</code> is, and determine the value of Recamán's sequence for that index.
+          Write a program that, when given a number <code>x</code>, determines if <code>x</code> is in the the first 45 elements of the fibonacci sequence. If <code>x</code> is in the first 45 elements of the fibonacci sequence, let <code>n</code> be equal to the index in the fibonacci sequence of the first occurence of <code>x</code>. i.e. with <code>x = 2</code> , 2 is the 3rd element of the fibonacci sequence, so <code>n = 3</code>. Now that you have <code>n</code> determine what <code>Recamán(n)</code> is. If <code>x</code> is <b>not</b> in the fibonacci sequence, inform the user and quit the program.
         </div>
         <div class="col-md-6">
           <h2>Specifications</h2>
           <p>n &lt;= 701408733</p>
+          <hr />
           <p>You only have to check if n is one of the first 45 elements of the fibonacci sequence, that is <code>fib(0)</code> through <code>fib(44)</code>.</p>
           <h2>Example Runs</h2>
           Input: <kbd>4181</kbd>
